--- a/public/style.css
+++ b/public/style.css
@@ -182,15 +182,18 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f0f0f0;
 }
+.height{
+  height: 100vh !important;
+}
 
 .ctn {
-  max-width: 70%; /* adjusted width to 70% of the page */
-  margin: 40px auto;
+  /* max-width: 70%; */
+  /* margin: 40px auto; */
   padding: 20px;
   background-color: rgb(230, 240, 244);
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  /* border: 1px solid #ddd; */
+  /* border-radius: 10px; */
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
 }
 
 
@@ -288,3 +291,24 @@ input[type="text"], input[type="email"], input[type="tel"], select {
     }
     
   }
+  @media only screen and (max-width: 375px) {
+    .subscription-options label:nth-child(1) {
+      margin-top: 10px;
+  }
+    .subscription-options {
+        flex-direction: row !important;
+        align-items: flex-start;
+    }
+}
+
+.toast {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #f44336; /* Red */
+  color: white;
+  padding: 16px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
