--- a/public/style.css
+++ b/public/style.css
@@ -146,9 +146,9 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f0f0f0;
 }
-.height{
+/* .height{
   height: 100vh !important;
-}
+} */
 
 .ctn {
  
